Add API documentation for retrieving the list of users
